package com.auction.model.item;

public class Electronics extends Item {
    public Electronics(String name, String description) {
        super(name, description);
    }
    @Override
    public String getCategory() {
        return "Electronics";
    }
}
