package com.auction.model.item;

import com.auction.model.common.Entity;

public abstract class Item extends Entity {
    private String name;
    private String description;

    public Item(String name, String description) {
        this.name = name;
        this.description = description;
    }

    public String getName() {
        return name;
    }

    public String getDescription() {
        return description;
    }
    public abstract String getCategory();
}